bug fixes. removal of rest elements. code style improvements